# RecallEngine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN_ETAPE_B.md  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: browse.rs  import.rs  mod.rs  search.rs  serve.rs  show.rs  stats.rs  verify.rs
src/commands/export/: bundles.rs  legacy_sqlite.rs  markdown.rs  mod.rs  tools.rs
src/domain/: canonical.rs  chatgpt_raw.rs  ic.rs  mod.rs  projections.rs  reference.rs
src/export/: legacy.rs  mod.rs
src/export/bundles/: mod.rs  models.rs  planner.rs  profile.rs  writer.rs
src/export/markdown/: mod.rs  options.rs  renderer.rs
src/import/: assets.rs  chatgpt.rs  discovery.rs  legacy_ic.rs  manifest.rs  mod.rs  validation.rs
src/models/: content_block.rs  conversation.rs  message.rs  mod.rs
src/output/: json.rs  mod.rs
src/read_model/: mod.rs  repository.rs
src/repository/: mod.rs  search.rs  sqlite.rs
src/search/: mod.rs  service.rs  snippet.rs
src/storage/: mod.rs  schema.rs  sql_idents.rs  sqlite.rs
src/storage/migrations/: 001_initial.sql  002_conversations_fts.sql
src/tui/: actions.rs  app.rs  event.rs  mod.rs  overlays.rs  render.rs  state.rs  tests.rs  text.rs
tests/: assets.rs  browse.rs  events.rs  export_legacy.rs  generate_golden_corpus.py  idempotency.rs  import_chatgpt.rs  search.rs  serve.rs  sqlite_concurrency.rs  tools.rs  validation.rs
tests/fixtures/chatgpt-sanitized/: conversation_asset_file_names.json  conversations-000.json  conversations-001.json  library_files.json  (+4 more)
