[package]
name = "recall-engine"
version = "0.1.0"
edition = "2021"
description = "Local Rust engine for ChatGPT export → canonical SQLite"
license = "MIT"
readme = "README.md"

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
arboard = { version = "3.6", default-features = false }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
chrono = "0.4.45"
zip = "8.6.0"
ratatui-textarea = "0.9.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
